--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -441,9 +441,9 @@ counter_cache_save_period: 7200
 # saved_caches_directory: /var/lib/cassandra/saved_caches
 
 # Number of seconds the server will wait for each cache (row, key, etc ...) to load while starting
-# the Cassandra process. Setting this to a negative value is equivalent to disabling all cache loading on startup
+# the Cassandra process. Setting this to 0 is equivalent to disabling all cache loading on startup
 # while still having the cache during runtime.
-# cache_load_timeout_seconds: 30
+# cache_load_timeout: 30s
 
 # commitlog_sync may be either "periodic", "group", or "batch." 
 #
@@ -1356,7 +1356,6 @@ transparent_data_encryption_options:
           keystore_password: cassandra
           store_type: JCEKS
           key_password: cassandra
-
 
 #####################
 # SAFETY THRESHOLDS #
